[package]
name = "trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
lettre = "0.11.4"
time = "0.3.34"
tokio-test = "0.4.3"
yahoo_finance_api = "2.1.0"
